--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,33 +59,35 @@ footer{
   .remove {
     visibility: hidden;
   }
-
+  
+.equal{
+  width: 150px;
+  height: 50px;
+}
   .Calc{
     display: grid;
     justify-content: center;
     align-content: center;
     min-height: 100vh;
-    grid-template-columns: repeat(4, 100px);
-    grid-template-rows: minmax(120px, auto) repeat(5, 100px)
+    grid-template-columns: repeat(4, 50px);
+    grid-template-rows: minmax(60px, auto) repeat(5, 50px)
   }
 
   .Calc button {
    
       cursor: pointer;
-      font-size: 2rem;
+      font-size: 1rem;
       border: 1px solid white;
       outline: none;
       background-color: rgba(255, 255, 255, .75);
     
   }
+
+  
   .Calc button:hover {
     background-color: rgba(255, 255, 255, .9);
   }
 
-  .row{
-    grid-column: span 3;
-    
-  }
 
   .output{
     grid-column: 1 / -1;
@@ -110,10 +112,9 @@ footer{
   }
 
   #div2 {
-    width:300px;
-    height:300px;
-    background-color: white;
-    opacity: 0.7; 
+    height: 500px;
+    width: 500px;
+    background-color: gray;
     position: absolute;
     text-align: center;
 }
@@ -138,5 +139,17 @@ div.previous{
 #mine img{
   width: 30px;
   height: 30px;
+  
+  }
+
+  .chatt {
+    
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-top: -50px;
+      margin-left: -50px;
+      width: 100px;
+      height: 100px;
   
   }
