--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,9 +52,9 @@ footer{
   
   }
   
-  body{
+  /* body{
     text-align: center;
-  }
+  } */
   
   .remove {
     visibility: hidden;
@@ -68,7 +68,6 @@ footer{
     display: grid;
     justify-content: center;
     align-content: center;
-    min-height: 100vh;
     grid-template-columns: repeat(4, 50px);
     grid-template-rows: minmax(60px, auto) repeat(5, 50px)
   }
@@ -111,12 +110,14 @@ footer{
     font-size: 2.5rem;
   }
 
-  #div2 {
-    height: 500px;
-    width: 500px;
+  .appWindow {
+    height: 400px;
+    width: 400px;
     background-color: gray;
     position: absolute;
     text-align: center;
+    resize: both;
+    cursor: move;
 }
 #close {
     position: absolute;
@@ -135,21 +136,30 @@ div.previous{
   
 }
 
+.chatt {
+  width: 80%;
+}
 
-#mine img{
-  width: 30px;
-  height: 30px;
-  
-  }
+.author{
+  font-style: italic;
+  color: yellow;
+}
 
-  .chatt {
-    
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      margin-top: -50px;
-      margin-left: -50px;
-      width: 100px;
-      height: 100px;
-  
-  }
+.text{
+  font-style: oblique;
+  color: azure;
+}
+
+.messages{
+  width: 100%;
+  height: 100px;
+  background-color: black;
+  resize: both;
+  overflow-y: auto;
+  color: white;
+}
+.textmassage{
+  width: 100%;
+  color: black;
+  z-index: 99;
+}
