--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,36 +49,55 @@ footer{
 
 #Board img{
   width: 40px
-  
   }
   
-  /* body{
-    text-align: center;
-  } */
+  #Board{
+    margin-top: 20px;
+  }
   
   .remove {
     visibility: hidden;
   }
+
+
+  .appWindow {
+    height: 260px;
+    width: 200px;
+    background-color: rgba(0, 217, 255, 0.445);
+    position: absolute;
+    text-align: center;
+    resize: both;
+    cursor: move;
+    border: 19px double rgba(164,0,29,0.75);
+    border-radius: 40px 0px 40px 0px;
+    cursor: grab;
+}
+
+.appWindow:active{
+  cursor: move;
+  cursor: grabbing;
+}
   
 .equal{
-  width: 150px;
-  height: 50px;
+  width: 105px;
+  height: 35px;
 }
   .Calc{
+    margin-top: 10px;
     display: grid;
     justify-content: center;
     align-content: center;
-    grid-template-columns: repeat(4, 50px);
-    grid-template-rows: minmax(60px, auto) repeat(5, 50px)
+    grid-template-columns: repeat(4, 35px);
+    grid-template-rows: minmax(45px, auto) repeat(5, 35px)
   }
 
   .Calc button {
    
       cursor: pointer;
       font-size: 1rem;
-      border: 1px solid white;
+      border: 1px solid rgba(10, 10, 10, 0.712);
       outline: none;
-      background-color: rgba(255, 255, 255, .75);
+      background-color: rgba(255, 255, 255, 0.904);
     
   }
 
@@ -110,19 +129,10 @@ footer{
     font-size: 2.5rem;
   }
 
-  .appWindow {
-    height: 400px;
-    width: 400px;
-    background-color: gray;
-    position: absolute;
-    text-align: center;
-    resize: both;
-    cursor: move;
-}
 #close {
     position: absolute;
     right: 14px;
-    font-size: 30px;
+    font-size: 20px;
     transform: rotate(45deg);
     cursor: pointer;
 }
@@ -143,23 +153,96 @@ div.previous{
 .author{
   font-style: italic;
   color: yellow;
+  
+  padding-right: 80px;
 }
 
 .text{
+ padding-right: 10px;
+ padding-left: 10px;
   font-style: oblique;
   color: azure;
+  background-color: rgba(28, 110, 164, 0.596);
+  display: inline-block;
+  border: 4px outset #1C6EA4;
+  border-radius: 0px 40px 40px 40px;
+  margin: 0;
 }
 
 .messages{
-  width: 100%;
-  height: 100px;
-  background-color: black;
+  margin-top: 10px;
+  width: 190px;
+  height: 151px;
+  background-color: rgba(0, 0, 0, 0.459);
   resize: both;
   overflow-y: auto;
   color: white;
+  border: 5px outset #1C6EA4;
+  border-radius: 40px 0px 0px 0px;
+
 }
 .textmassage{
-  width: 100%;
+  width: 186px;
+  height: 20px;
   color: black;
   z-index: 99;
+  resize: none;
+  border: 5px ridge rgb(21, 11, 77);
+  border-radius: solid;
+}
+
+#sendUser:hover {
+  border-radius: 8px;
+  background-color: violet;
+  border-color: black;  
+  transform: scale(1.3)
+}
+#sendUser {
+  border-radius: 8px;
+  background-color: rgb(189, 59, 189);
+  border-color: black;  
+  font-size: 12px;
+}
+
+#spara{
+  font-size: 10px;
+  margin: 1;
+  font-family: monospace;
+  color: rgba(0, 0, 0, 0.541);
+  margin: 0;
+}
+
+
+#username{
+  height: 10px;
+  width: 70px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+
+::-webkit-scrollbar-track {
+  background: #f1f1f100;
+}
+
+
+::-webkit-scrollbar-thumb {
+  background: rgb(13, 13, 14);
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(58, 59, 70);
+}
+
+
+
+.divHeader{
+  margin: 0;
+  font-family: cursive;
+  color:black;
+  font-size:20px;
 }
