--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,7 +48,7 @@ footer{
 
 
 #Board img{
-  width: 40px
+  width: 50px
   }
   
   #Board{
@@ -61,8 +61,8 @@ footer{
 
 
   .appWindow {
-    height: 260px;
-    width: 200px;
+    height: 360px;
+    width: 250px;
     background-color: rgba(0, 217, 255, 0.445);
     position: absolute;
     text-align: center;
@@ -72,6 +72,12 @@ footer{
     border-radius: 40px 0px 40px 0px;
     cursor: grab;
 }
+.divHeader{
+  margin: 0;
+  font-family: cursive;
+  color:black;
+  font-size:20px;
+}
 
 .appWindow:active{
   cursor: move;
@@ -79,15 +85,15 @@ footer{
 }
   
 .equal{
-  width: 105px;
-  height: 35px;
+  width: 135px;
+  height: 53px;
 }
   .Calc{
     display: grid;
     justify-content: center;
     align-content: center;
-    grid-template-columns: repeat(4, 35px);
-    grid-template-rows: minmax(45px, auto) repeat(5, 35px)
+    grid-template-columns: repeat(4, 45px);
+    grid-template-rows: minmax(53px, auto) repeat(5, 53px)
   }
 
   .Calc button {
@@ -153,41 +159,45 @@ div.previous{
   font-style: italic;
   color: yellow;
   
-  padding-right: 80px;
+  padding-right: 150px;
 }
 
 .text{
- padding-right: 10px;
- padding-left: 10px;
+ padding-right: 30px;
+ padding-left: 30px;
   font-style: oblique;
   color: azure;
-  background-color: rgba(28, 110, 164, 0.596);
-  display: inline-block;
-  border: 4px outset #1C6EA4;
+  background-color: rgba(2, 2, 2, 0.596);
+  text-align: left;
+  border: 4px outset rgb(21, 14, 107);
   border-radius: 0px 40px 40px 40px;
   margin: 0;
+  width: 70px;
+  display: inline-block;
+  overflow-wrap: break-word;
 }
 
 .messages{
-  margin-top: 10px;
-  width: 190px;
-  height: 151px;
+  margin-top: 1px;
+  width: 240px;
+  height: 253px;
   background-color: rgba(0, 0, 0, 0.459);
-  resize: both;
+  resize: none;
   overflow-y: auto;
   color: white;
-  border: 5px outset #1C6EA4;
-  border-radius: 40px 0px 0px 0px;
-
+  border: 6px outset rgb(21, 14, 107);
+  border-radius: 40px 40px 40px 40px;
 }
 .textmassage{
   width: 186px;
-  height: 20px;
-  color: black;
+  background-color:  rgba(0, 0, 0, 0.659) ;
+  color: azure;
   z-index: 99;
   resize: none;
-  border: 5px ridge rgb(21, 11, 77);
-  border-radius: solid;
+  border: 1px ridge rgb(10, 10, 10);
+  border-radius: 4px 4px 4px 4px;;
+  margin-left: 15%;
+  
 }
 
 #sendUser:hover {
@@ -197,39 +207,35 @@ div.previous{
   transform: scale(1.3)
 }
 #sendUser {
-  border-radius: 8px;
+  border-radius: 4px;
   background-color: rgb(189, 59, 189);
   border-color: black;  
   font-size: 12px;
 }
 
-#spara{
-  font-size: 10px;
-  margin: 1;
-  font-family: monospace;
-  color: rgba(0, 0, 0, 0.541);
-  margin: 0;
-}
-
-
 #username{
-  height: 10px;
+  margin-top: 5px;
+  height: 15px;
   width: 70px;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.555);
+  border-color: black;  
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
+  width: 8px;
 }
 
 
 ::-webkit-scrollbar-track {
   background: #f1f1f100;
+  border-radius: 4px 4px 4px 4px;
 }
 
 
 ::-webkit-scrollbar-thumb {
-  background: rgb(13, 13, 14);
+  background: rgba(13, 13, 14, 0.521);
+  border-radius: 4px 4px 4px 4px;
 }
 
 
@@ -239,9 +245,3 @@ div.previous{
 
 
 
-.divHeader{
-  margin: 0;
-  font-family: cursive;
-  color:black;
-  font-size:20px;
-}
